# sg_dash

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: main.yml
src/goon_dash/: gnpch.h  main.c
